Fix footer not covering content and covering content

--- a/badgesapp/static/css/common.css
+++ b/badgesapp/static/css/common.css
@@ -100,6 +100,7 @@ nav a {
     margin-top: 90px;
     margin-left: 1rem;
     margin-right: 1rem;
+    margin-bottom: 10rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -160,7 +161,7 @@ overflow: hidden;
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 3rem;
+    min-height: 3rem;
     justify-content: space-between;
     align-items: center;
     display: flex;
